fix: 修复所有测试编译错误（JPA→MyBatis 迁移遗留）
- 16个测试文件：Repository → Mapper 导入/字段/打桩/验证全部迁移
- JPA save()/findById()/delete() → MyBatis insert()/findById()/deleteById()
- AnniversaryVO → AnniversaryService.AnniversaryDetail（控制器测试）
- PageImpl → PageResult（控制器测试）
- RepositoryTest 移除已删除的 @AutoConfigureTestDatabase
- test-compile 零错误